# GLSL_3D_Particle_Gravity

./: .gitignore  CMakeLists.txt  README.md
glad/: glad.c
src/: '  camera.hpp  colors.cpp  colors.hpp  debug.cpp  debug.hpp  galaxy.cpp  galaxy.hpp  main.cpp  random.cpp  random.hpp  shaders.cpp  shaders.hpp  sphere.cpp  sphere.hpp  star.cpp  star.hpp
src/shaders/: bloom.frag  blur.frag  blur.vert  final.frag  fragment.frag  gas.frag  physics.comp  text_fragment.frag  text_vertex.vert  vertex.vert
